update gc-log.md